--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -29,7 +29,7 @@
 
     <!--Intro section-->
     <div class="container">
-        <section class="intro section">
+        <section id="home" class="intro section">
             <div class="intro-content">
                 <h2>Welcome to My Portfolio!</h2>
                 <p>I’m Shaik Nayeem, a Front End Developer and UI/UX Designer dedicated to creating visually stunning
@@ -44,7 +44,7 @@
         </section>
 
         <!--Service section-->
-        <section class="service section">
+        <section id="services" class="service section">
             <h2>SERVICES</h2>
             <div class="service-content">
                 <div class="effect-box">
@@ -69,7 +69,7 @@
         </section>
 
         <!--Skills section-->
-        <section class="skills section">
+        <section id="skills" class="skills section">
             <h2>SKILLS</h2>
             <div class="skills-content">
                 <div class="skill-box">
@@ -116,7 +116,7 @@
         </section>
 
         <!--Projects section-->
-        <section class="projects section">
+        <section id="projects" class="projects section">
             <h2>FEATURED PROJECTS</h2>
             <div class="projects-content">
                 <div class="project-box">
@@ -148,7 +148,7 @@
         </section>
 
         <!--Contact section-->
-        <section class="contact section">
+        <section id="contact" class="contact section">
             <h2>Contact Me</h2>
             <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
                 <div class="contact-field">
